Archive2/da/a05f5759fca426/output
main.cpp:37:15: error: no matching function for call to 'resolve'
    auto o1 = resolve<int>(overloaded);
              ^~~~~~~~~~~~
main.cpp:7:6: note: candidate function [with Sig = int] not viable: no overload of 'overloaded' matching 'int *' for 1st argument
Sig* resolve( Sig* fun_ptr ) {
     ^
main.cpp:2:6: note: candidate template ignored: couldn't infer template argument 'R'
auto resolve( R (*fun_ptr)( Args... ) ) -> R( *)( Args... ) {
     ^
main.cpp:12:6: note: candidate template ignored: couldn't infer template argument 'R'
auto resolve( R( C::*mem_ptr )( Args... ) ) -> R( C::* )( Args... ) {
     ^
main.cpp:39:15: error: no matching function for call to 'resolve'
    auto o2 = resolve<int, int>(overloaded);
              ^~~~~~~~~~~~~~~~~
main.cpp:2:6: note: candidate template ignored: couldn't infer template argument 'R'
auto resolve( R (*fun_ptr)( Args... ) ) -> R( *)( Args... ) {
     ^
main.cpp:12:6: note: candidate template ignored: couldn't infer template argument 'R'
auto resolve( R( C::*mem_ptr )( Args... ) ) -> R( C::* )( Args... ) {
     ^
main.cpp:7:6: note: candidate template ignored: invalid explicitly-specified argument for template parameter 'Sig'
Sig* resolve( Sig* fun_ptr ) {
     ^
2 errors generated.
